--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>  
     
   <body>
+    <img src+"Professional woman.jpg"/>
     <h1>Cerissa's Resume</h1>
     <p> This is my first web page!</p>
   </body>
