--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   
   <head>
+   <title>Prodessional Resume</title> 
  <link href="style.css" rel="StyleSheet"/>
   </head>  
     
   <body>
+	<h1><strong>Cerissa Parrish</strong></h1> 
+    <p><img src="Professional woman.jpg" />
+    
     <img src+"Professional woman.jpg"/>
     <h1>Cerissa's Resume</h1>
+    4422 Happy Ave<br>
+    Landover, MD, 20745 <br>
+    301-404-4444 <br>
+    Cerissa@gmail.com <br>
     <p> This is my first web page!</p>
   </body>
   
