--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   
   <head>
-   <title>Prodessional Resume</title> 
+   <title>Professional Resume</title> 
  <link href="style.css" rel="StyleSheet"/>
   </head>  
     
