--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     301-404-4444 <br>
     Cerissa@gmail.com <br>
     <p> This is my first web page!</p>
+	  <p>&nbsp;</p>  
+	  <hr>
+	 <h2>Work Experience</h2> 
+	  
+	  
   </body>
   
 </html>
