--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <p>&nbsp;</p>  
 	  <hr>
 	 <h2>Work Experience</h2> 
-	  
+	  <p>2016 - present<strong> - Healthcare Admininstrative>, Washington, DC<br>
 	  
   </body>
   
