--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			 <li>Managed accounts by identifying department compliance errors by auditing and compiling information and reports for upper management.</li>
 			  
 			  </ul>
-	  <p>2014-2016<strong> - Washington Hospital</strong>r; Washington, DC<br>
+	  <p>2014-2016<strong> - Washington Hospital</strong>, Washington, DC<br>
 		  <em>Verification Specialist</em></p>
 	  <ul>
 	  		<li>Provided excellent customer service while performing patient registration, intake for twelve specialty outpatient clinic areas.</li>
