--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
   <body>
 	<h1><strong>Cerissa Parrish</strong></h1> 
-    <p><img src="Professional woman.jpg" />
+	  <p><img src="Professional woman.jpg" </p>
     
     <img src+"Professional woman.jpg"/>
     <h1>Cerissa's Resume</h1>
@@ -16,8 +16,8 @@
     301-404-4444 <br>
     Cerissa@gmail.com <br>
     <p> This is my first web page!</p>
-	  <p>&nbsp;</p>  
-	  <hr>
+	  
+
 	 <h2>Work Experience</h2> 
 	  <p>2016 - present<strong> - Georgetown University, Washington, DC<br>
 		  <em>Healthcare Administration</em></p> 
