--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     
   <body>
 	<h1><strong>Cerissa Parrish</strong></h1> 
-	  <p><img src="Professional woman.jpg" </p>
+	  <p><img src="Professional woman.jpg" 
     
     <img src+"Professional woman.jpg"/>
     <h1>Cerissa's Resume</h1>
     4422 Happy Ave<br>
     Landover, MD, 20745 <br>
     301-404-4444 <br>
-    Cerissa@gmail.com <br>
-    <p> This is my first web page!</p>
-	  
+    Cerissa@gmail.com <br> </p>
+   
+	  <p>&nbsp;</p>	
+	
 
 	 <h2>Work Experience</h2> 
 	  <p>2016 - present<strong> - Georgetown University, Washington, DC<br>
