--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
-  
-  <head>
-   <title>Professional Resume</title> 
- <link href="style.css" rel="StyleSheet"/>
-  </head>  
-    
+!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+	
+     <title>Cerissa Parrish Resume</title>
+</head>
   <body>
 	<h1><strong>Cerissa Parrish</strong></h1> 
 	  <p><img src="Professional woman.jpg" 
