--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
   <body>
 	<h1><strong>Cerissa Parrish</strong></h1> 
-	  <p><img src="Professional woman.jpg" 
+	  <p><img src="Professional woman.jpg" </p>
     
-    <img src+"Professional woman.jpg"/>
+
     <h1>Cerissa's Resume</h1>
     4422 Happy Ave<br>
     Landover, MD, 20745 <br>
