--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <title>Cerissa Parrish Resume</title>
 </head>
   <body>
-	  <p><img src="Professional woman.jpg" </p>
+	  <p><img src="Professional woman.jpg" />
     
 
     <h1>Cerissa's Resume</h1>
