--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 
 	 <h2>Work Experience</h2> 
-	  <p>2016 - present<strong> - Georgetown University, Washington, DC<br>
+	<p>2016 - present<strong> - Georgetown University</strong>, Washington, DC<br>
 		  <em>Healthcare Administration</em></p> 
 		  <ul>
 			 <li>Provided pre verification of medical insurance, obtained eligibility and coverage and validated patient demographic information for outpatient care.</li>
